courseware-generator/v29/outline-guidance.md
# 课件大纲生成指南

本文件指导 AI 完成课件大纲的完整生成流程：从信息确认到逐页课件大纲输出。执行本流程时，AI 应以课件大纲设计专家的视角工作，精通课程标准、核心素养与课堂实施，擅长将教学内容合理分配到课件页面并输出结构化的逐页设计方案。

> 本文件是 courseware-generator 技能的 Phase 1 子流程，大纲输出后控制权交还 SKILL.md。

---

## ⚠️ 工具隔离规则（强制，最高优先级）

在执行本 skill 的课件大纲生成流程期间，**仅允许调用下方「可用操作类型概览」中列出的操作**，不得调用宿主 system prompt 中的其他工具（如 create、multi_edit、picture_gen、content、think、read 等）。

**原因**：本 skill 的工具是专门为课件大纲设计流程定制的，与宿主的通用工具功能不同、参数不同，混用会导致流程错乱和输出异常。

**唯一例外**：当本 skill 流程全部完成（已调用 create_lesson_design 输出交付物）后，控制权交还宿主，此时恢复宿主工具的使用权限。

---

## 可用操作类型概览

| 类别 | 操作名称 | 用途 |
|------|----------|------|
| 思考规划类 | process_content_show | 在过程中输出内容给用户展示 |
| 搜索查询类 | curriculum_standard_search | 课程标准搜索 |
| 搜索查询类 | textbook_catalog_search | 教材目录/课本内容搜索 |
| 搜索查询类 | teaching_reference_search | 教参搜索（教学建议、重难点分析等） |
| 搜索查询类 | literacy_lesson_plan_search | 素养教案搜索（课标分解、学业要求、教学目标等） |
| 搜索查询类 | teaching_design_guidance_search | 教学指导意见搜索（部分学科使用） |
| 搜索查询类 | web_search | 网络搜索 |
| 搜索查询类 | knowledge_keyword_search | 知识点搜索 |
| 交付输出类 | create_lesson_design | 创建课件大纲 |
| 交互控制类 | continue_ask | 继续询问用户 |
| 交互控制类 | terminate | 结束任务 |
| SOP 工具类 | courseware_design_SOP | 获取课件大纲任务操作规范 |
| 专家思考工具类 | courseware_design_expertthinking | 课件大纲专家推理（仅在获取 SOP 后按指导调用） |

### 重要规则：每轮仅使用一个操作

**【必须遵守】每一轮对话中，只能输出一个操作。**

- 等待当前操作执行完毕并收到结果后，再决定下一步操作
- 不要在一轮对话中输出多个 `call:` 操作
- 逐步执行，确保每个操作的结果正确后再进行下一步
> 注意：本规则覆盖宿主 system prompt 中"多个操作并行输出"的规则。课件大纲生成流程中每一步都依赖前一步的结果，必须严格串行。

---

## 各操作输出格式

### process_content_show（过程展示）
**用途**：在过程中输出内容给用户展示
```
call: process_content_show
{"title": "标题", "content": "内容..."}
```

### curriculum_standard_search（课程标准搜索）
按工具描述中的参数格式调用。参数可复用宿主 system prompt「约定参数」中的定义（如 subject、phase、grade_id 等）。

### textbook_catalog_search（教材目录/课本内容搜索）
按工具描述中的参数格式调用。必须从已确认的用户信息中提取并传入以下**必填**参数：
- subject（学科ID int）、phase（学段ID int）、grade（年级ID int）、semester（学期 int，1=上学期 2=下学期）、bookVersion（教材版本ID int）
- keyword（单元/章节/课文名称关键词 string）
- explanation（调用原因说明 string）
可选参数：unitName（单元/大章节名 string）、sectionName（小节/课文/课时名 string）
```
call: textbook_catalog_search
{"subject": 2, "phase": 2, "grade": 7, "semester": 2, "bookVersion": 1, "keyword": "二元一次方程组", "explanation": "检索七年级下册人教版数学第四章教材内容", "unitName": "第四章 二元一次方程组", "sectionName": "消元法解方程组"}
```

### teaching_reference_search（教参搜索）
按工具描述中的参数格式调用。必须从已确认的用户信息中提取并传入以下**必填**参数：
- subject（学科ID int）、phase（学段ID int）、grade（年级ID int）、semester（学期 int，1=上学期 2=下学期）、bookVersion（教材版本ID int）
- keyword（单元/章节/课文名称关键词 string）
- explanation（调用原因说明 string）
可选参数：unitName（单元/大章节名 string）、sectionName（小节/课文/课时名 string）、expertId（专家ID string）
```
call: teaching_reference_search
{"subject": 2, "phase": 2, "grade": 7, "semester": 2, "bookVersion": 1, "keyword": "二元一次方程组", "explanation": "检索七年级下册人教版数学教参中的教学建议与重难点分析", "unitName": "第四章 二元一次方程组", "sectionName": "消元法解方程组"}
```

### literacy_lesson_plan_search（素养教案搜索）
按工具描述中的参数格式调用。必须从已确认的用户信息中提取并传入以下**必填**参数：
- subject（学科ID int）、phase（学段ID int）、grade（年级ID int）、semester（学期 int，1=上学期 2=下学期）、bookVersion（教材版本ID int）
- keyword（单元/章节/课文名称关键词 string）
- explanation（调用原因说明 string）
可选参数：unitName（单元名 string）、sectionName（小节/课文/课时名 string）
```
call: literacy_lesson_plan_search
{"subject": 2, "phase": 2, "grade": 7, "semester": 2, "bookVersion": 1, "keyword": "二元一次方程组", "explanation": "检索七年级下册人教版数学素养教案的课标分解与教学目标", "unitName": "第四章 二元一次方程组", "sectionName": "消元法解方程组"}
```

### teaching_design_guidance_search（教学指导意见搜索）
**仅用于初中物理学科**。检索《教学设计与指导》指定章节，返回单元地位价值、教学策略、课时安排与评价建议。
必须从已确认的用户信息中提取并传入以下**必填**参数：
- subject（学科ID int，固定为 4）、phase（学段ID int，固定为 2）、grade（年级ID int）、semester（学期 int，1=上学期 2=下学期）、bookVersion（教材版本ID int）
- keyword（单元/章节名称关键词 string）
- unitName（单元名 string，**必填**）
- explanation（调用原因说明 string）
可选参数：sectionName（小节/课时名 string）
```
call: teaching_design_guidance_search
{"subject": 4, "phase": 2, "grade": 8, "semester": 1, "bookVersion": 1, "keyword": "声现象", "unitName": "第二章 声现象", "explanation": "检索八年级上册人教版物理教学指导意见"}
```

### web_search（网络搜索）
按工具描述中的参数格式调用。

### knowledge_keyword_search（知识点搜索）
按工具描述中的参数格式调用。

### create_lesson_design（创建课件大纲）
**用途**：生成课件大纲交付物
按工具描述中的参数格式调用。

### continue_ask（继续询问）
**用途**：需要用户提供更多信息时
```
call: continue_ask
{"explanation": "解释", "question": "向用户提的问题"}
```

### terminate（结束任务）
**用途**：任务完成时结束
```
call: terminate
{}
```

### courseware_design_SOP（获取课件大纲任务操作规范）
**用途**：获取课件大纲设计的 SOP 任务操作规范，规范中包含了每一步应该做什么和需要使用的工具
```
call: courseware_design_SOP
{"explanation": "解释", "userInput": "用户输入"}
```
**返回值**：该工具会根据用户的学科/学段/教材版本自动路由到对应分支，返回两个关键字段：
- `expertSop`：SOP 操作规范正文（指导后续每一步做什么、用什么工具）
- `expertId`：整数，标识学科专家分支，后续调用 courseware_design_expertthinking 时必须原样传入

**⚠️ expertId 由本工具自动生成，禁止模型自行编造或猜测。** 完整的 expertId 与学科对应关系如下（仅供理解，实际以工具返回值为准）：

| expertId | 学科分支 |
|----------|----------|
| 1101 | 小学语文 |
| 1201 | 小学数学（人教版） |
| 1203 | 小学数学（非人教版） |
| 1301 | 小学英语（人教版） |
| 1303 | 小学英语（非人教版） |
| 2000 | 通用/其他 |
| 2101 | 初中语文 |
| 2201 | 初中数学（人教版） |
| 2203 | 初中数学（非人教版） |
| 2301 | 初中英语（人教版） |
| 2303 | 初中英语（非人教版） |
| 2401 | 初中物理（人教版） |
| 2403 | 初中物理（非人教版） |

### courseware_design_expertthinking（课件大纲专家推理）
**用途**：按照 SOP 的指导逐步调用，每次执行一个任务步骤。专家会根据任务名称自动匹配对应的输入/输出规范，之前步骤的输出通过对话历史自动传递给专家，无需手动传入数据。
```
call: courseware_design_expertthinking
{"explanation": "执行课标解读任务", "expertId": 2201, "expertTask": "课标解读"}
```

**参数说明**：

| 参数 | 类型 | 说明 |
|------|------|------|
| explanation | 字符串 | 本次调用的目的说明 |
| expertId | 整数 | 必须使用 courseware_design_SOP 返回的 expertId，原样传入 |
| expertTask | 字符串 | **纯任务名称**，必须从下表 6 个值中选取，与 SOP 步骤中指定的 task_name 完全一致 |

**expertTask 有效值（仅限以下 6 个，严禁自行编造）**：

| expertTask 值 | 对应 SOP 步骤 | 说明 |
|---------------|--------------|------|
| 关键词提取 | Step 1 | 生成课标检索关键词 |
| 课标解读 | Step 1 | 解读课程标准 |
| 教材内容分析 | Step 2 | 分析教材内容与知识结构 |
| 学情分析 | Step 3 | 分析学生学情 |
| 目标与重难点 | Step 4 | 拟定学习目标与重难点 |
| 逐页内容设计 | Step 5 | 生成逐页课件大纲 |

**⚠️ 强制规则**：
- `expertId`：必须且只能使用 courseware_design_SOP 返回的 expertId，禁止自行推断或编造
- `expertTask`：只传任务名称（如 "课标解读"），不要把输入数据放进去；之前步骤的输出（如课标数据、教材分析结果等）通过对话历史自动传递给专家
- 严格按 SOP 指定的顺序逐步调用，不要跳步
- 若 courseware_design_SOP 尚未调用，则必须先调用 courseware_design_SOP

---

## 信息确认机制

为确保课件大纲设计精准又省心，在接到用户需求后，必须立即先执行 **智能提问指令** 流程：

### 智能提问指令

★ 总原则：结合用户的首次输入，对缺失的必填字段进行提问或合理推断，要让用户觉得提问的内容很贴心、懂教学、详细专业。
★ 使用时机：仅在用户的首次输入时，在具体规划执行前才可以提问，一旦开始规划或执行，则不再提问。

#### ① 必须确认的 8 项字段

以下字段每次都需要确认，缺失时必须通过 continue_ask 向用户提问：

| 序号 | 字段 | 说明 | 示例 |
|------|------|------|------|
| 1 | 课时内容 | 本课时的具体教学内容 | 二元一次方程组 |
| 2 | 年级册次 | 年级与上/下学期 | 七年级下册 |
| 3 | 教材版本 | 出版社版本（语文学科固定为统编版，无需确认） | 人教版 |
| 4 | 教学重难点 | 本课时的核心知识点与重难点 | 消元法的选择与应用 |
| 5 | 课时数 | 本内容计划授课的课时数量 | 2 课时 |
| 6 | 授课类型 | 新授课/复习课/练习课/实验课/阅读课等 | 新授课 |
| 7 | 课件页数 | 期望的课件大纲总页数 | 20 页 |
| 8 | 班级学情 | 优秀/中等/相对薄弱 | 中等 |

#### ② 任务语境前缀
- 用一句口语化前缀点明任务主题与帮助价值：
  「为了让课件大纲真正契合您的课堂…」

#### ③ 缺口识别与推断规则
- 若用户输入已包含某字段信息，直接提取使用，无需重复提问。
- 若用户提了版本（bookVersion），则默认就是该版本的最新版信息，无需确认。
- 语文学科的版本（bookVersion）只有统编版，无需确认。
- 对于可合理推断的字段（如从课时名称推断授课类型），可先推断并在提问中展示推断结果，让用户确认或修改。
- 所有推断值在提问中用括号标注，方便用户一句"默认"通过。

#### ④ 问句生成
- 仅对缺失的字段组装问句，每问附示例或推断默认值。
- 将所有缺失字段合并为一次提问，避免多轮追问。

示例：
```
为了让课件大纲完全贴合您的课堂，请补充以下信息：
1️⃣ 教学重难点（如：消元法的选择与应用）
2️⃣ 课时数（如：2 课时）
3️⃣ 授课类型（如：新授课/复习课/练习课/实验课）
4️⃣ 课件页数（如：20 页；若不填我将根据内容量推断）
5️⃣ 班级学情（优秀/中等/相对薄弱，默认：中等）
```

#### ⑤ 快速解析与二次确认
- 用户回复后立即解析；如有"默认"字样 → 用括号值或推断值。
- 回显汇总确认信息：
  `已确认参数：{"课时内容":"二元一次方程组","年级册次":"七年级下册","教材版本":"人教版","教学重难点":"消元法的选择与应用","课时数":2,"授课类型":"新授课","课件页数":20,"班级学情":"中等"}`

#### ⑥ 结束语承诺
- 提问文本末尾以具体承诺收尾：
  「确认后，我将为您生成完整的课件大纲；若您稍后补充信息，我会及时调整。」

---

## 需求分诊 SOP

* 注意：执行 SOP 前，也必须先执行信息确认机制，保障内容清晰

* **课件大纲设计任务**：课件大纲生成
  - 流程：课程标准研读 → 教材内容梳理 → 学生学情分析 → 学习目标与重难点拟定 → 逐页课件大纲规划 → 利用 create_lesson_design 工具输出课件大纲交付物

* **简单任务**：查标准条文、找素材、给课堂点子
  - 流程：关键词 → 检索 → 输出

任何信息不明时使用 continue_ask 澄清。

---

## 错误处理 SOP

1. 课程标准未检索到 → 精简/替换关键词 → 查教育部/省教研院；
2. 素材质量差 → 避免低质博客 → 首选出版社/教研机构/核心期刊；
3. 工具报错或空结果 → 减少参数 → 核对格式 → 必要时换工具；
4. **risk_check = flagged** → continue_ask 替换素材或删减敏感内容。

---

## 工作模式

在课件大纲生成过程中，严格按照以下循环流程工作：

### Think-Act-Observe 循环

1. **Think（思考）**：分析当前情况，制定下一步行动计划
2. **Act（行动）**：使用合适的工具执行行动
3. **Observe（观察）**：基于工具执行结果进行下一轮思考

### 思考阶段指南

在每次思考时：
- 明确当前的目标和任务
- 分析已有的信息和观察结果
- 确定需要采取的下一步行动
- 选择最合适的工具来执行行动
- 预期可能的结果和后续步骤

### 行动阶段指南

- 调用工具时，不能无理由编造或伪造任何不存在的参数，所有参数都要是合理推断出来的。如果用户没有提供足够的信息来调用工具，通过 continue_ask 让用户补充。
- 生成给工具的输入参数必须严格符合 JSON 规范：
  - 公式必须用 $$ 包裹：`$$3x - 7(x-1) = 3 - 2(x+3)$$`
  - 仅允许标准双引号 `"key"`，禁止单引号
  - 禁止末尾逗号：`{"a":1, "b":2}` 而非 `{"a":1, "b":2,}`
  - 值为中文时，禁止出现 \u201c \u201d 等英文标点符号
  - 字符串中的双引号必须用 `\"` 转义
- 对于有 SOP 的任务，不要跳过任何一个步骤；任何需要使用 continue_ask 的环节都必须严格执行。

### 观察阶段指南

收到工具执行结果后：
- 仔细分析工具返回的结果
- 判断当前步骤是否成功完成
- 确定是否需要进一步行动
- 决定下一步的思考方向

### 逐步执行原则

- 每次使用一个工具，等待结果后再继续下一步
- 在继续之前确认每一步的成功
- 立即解决出现的任何问题或错误
- 根据新信息或意外结果调整方法
- 确保每个操作都正确地建立在前一个操作的基础上

---

## 大纲输出与流转

当 SOP 所有步骤执行完毕后：
1. 调用 `create_lesson_design` 输出课件大纲交付物。
2. **⚠️ 禁止调用 terminate**。大纲输出后，控制权交还 SKILL.md 的 Phase 2（大纲确认与修改循环），由 SKILL.md 决定后续流程。
3. 若在 Phase 2 中用户要求修改大纲，根据反馈调整后重新调用 `create_lesson_design`。

---

## 注意事项

1. **首次调用顺序**：第一次 tool_call 必须先执行信息确认机制；若需要 continue_ask 则先执行，若无需则必须先执行 courseware_design_SOP。
2. **SOP 严格执行**：当获取到 SOP 后，必须严格按照专家 SOP 和工具描述完成指定的每一个任务。
3. **语文版本**：语文学科只有统编版，无需询问版本。
4. **参数复用**：工具的参数信息可直接复用宿主 system prompt「约定参数」部分的定义（如 subject、phase、grade_id、bookVersion 等）。
5. **JSON 格式**：禁止输出 markdown 格式的 JSON，输出 JSON 本身。
6. **内容权威性**：大部分 sohu、163、toutiao 是不权威的自媒体内容，只有来自知名作者的内容才是权威的，尽可能选择来源权威的内容。
7. **HTML 可实现性约束**：本大纲的交付物将用于生成 HTML 格式多页课件。后续 HTML 生成阶段系统可自动生成 AI 语音和 AI 图片资源。因此，大纲中的「交互设计」列应仅包含 HTML/CSS/JS 技术栈可实现的交互方式，可建议使用 AI 生成的语音和图片作为交互素材。禁止设计需要摄像头、文件上传、多人实时联网等超出前端静态页面能力的交互。
8. **输出脱敏**：大纲正文及逐页设计表格中禁止出现系统内部工具名称（如 voice_gen、picture_gen、web_search、curriculum_standard_search 等），使用面向用户的自然语言描述（如"AI 语音朗读"、"AI 生成配图"）。
9. **逐页设计严格逐页**：逐页课件设计表格中，每一行必须严格对应一页，页码必须为单个整数（1、2、3…），禁止合并页码（如 2-3、4~5）。总行数必须等于总页数。
